crates/parser/tests/snapshots/statements/valid/0047@2.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "\nCREATE DATABASE x ENCODING \"SQL_ASCII\";"
---
Parse {
    cst: SourceFile@0..40
      Newline@0..1 "\n"
      CreatedbStmt@1..40
        Create@1..7 "CREATE"
        Whitespace@7..8 " "
        Database@8..16 "DATABASE"
        Whitespace@16..17 " "
        Ident@17..18 "x"
        Whitespace@18..19 " "
        DefElem@19..39
          Encoding@19..27 "ENCODING"
          Whitespace@27..28 " "
          Ident@28..39 "\"SQL_ASCII\""
        Ascii59@39..40 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreatedbStmt(
                CreatedbStmt {
                    dbname: "x",
                    options: [
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "encoding",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    String(
                                                        String {
                                                            sval: "SQL_ASCII",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 18,
                                    },
                                ),
                            ),
                        },
                    ],
                },
            ),
            range: 0..39,
        },
    ],
}
