crates/parser/tests/snapshots/statements/valid/0047@6.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "\nCREATE DATABASE x TEMPLATE TRUE;"
---
Parse {
    cst: SourceFile@0..33
      Newline@0..1 "\n"
      CreatedbStmt@1..33
        Create@1..7 "CREATE"
        Whitespace@7..8 " "
        Database@8..16 "DATABASE"
        Whitespace@16..17 " "
        Ident@17..18 "x"
        Whitespace@18..19 " "
        DefElem@19..32
          Template@19..27 "TEMPLATE"
          Whitespace@27..28 " "
          TrueP@28..32 "TRUE"
        Ascii59@32..33 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreatedbStmt(
                CreatedbStmt {
                    dbname: "x",
                    options: [
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "template",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    String(
                                                        String {
                                                            sval: "true",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 18,
                                    },
                                ),
                            ),
                        },
                    ],
                },
            ),
            range: 0..32,
        },
    ],
}
