crates/parser/tests/snapshots/statements/valid/0051@1.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE UNIQUE INDEX title_idx ON films (title);
---
Parse {
    cst: SourceFile@0..47
      IndexStmt@0..47
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Unique@7..13 "UNIQUE"
        Whitespace@13..14 " "
        Index@14..19 "INDEX"
        Whitespace@19..20 " "
        Ident@20..29 "title_idx"
        Whitespace@29..30 " "
        On@30..32 "ON"
        Whitespace@32..33 " "
        RangeVar@33..38
          Ident@33..38 "films"
        Whitespace@38..39 " "
        Ascii40@39..40 "("
        IndexElem@40..45
          Ident@40..45 "title"
        Ascii41@45..46 ")"
        Ascii59@46..47 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: IndexStmt(
                IndexStmt {
                    idxname: "title_idx",
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "films",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 33,
                        },
                    ),
                    access_method: "btree",
                    table_space: "",
                    index_params: [
                        Node {
                            node: Some(
                                IndexElem(
                                    IndexElem {
                                        name: "title",
                                        expr: None,
                                        indexcolname: "",
                                        collation: [],
                                        opclass: [],
                                        opclassopts: [],
                                        ordering: SortbyDefault,
                                        nulls_ordering: SortbyNullsDefault,
                                    },
                                ),
                            ),
                        },
                    ],
                    index_including_params: [],
                    options: [],
                    where_clause: None,
                    exclude_op_names: [],
                    idxcomment: "",
                    index_oid: 0,
                    old_node: 0,
                    old_create_subid: 0,
                    old_first_relfilenode_subid: 0,
                    unique: true,
                    nulls_not_distinct: false,
                    primary: false,
                    isconstraint: false,
                    deferrable: false,
                    initdeferred: false,
                    transformed: false,
                    concurrent: false,
                    if_not_exists: false,
                    reset_default_tblspc: false,
                },
            ),
            range: 0..46,
        },
    ],
}
