crates/parser/tests/snapshots/statements/valid/0051@2.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "\nCREATE UNIQUE INDEX title_idx ON films (title) INCLUDE (director, rating);"
---
Parse {
    cst: SourceFile@0..75
      Newline@0..1 "\n"
      IndexStmt@1..75
        Create@1..7 "CREATE"
        Whitespace@7..8 " "
        Unique@8..14 "UNIQUE"
        Whitespace@14..15 " "
        Index@15..20 "INDEX"
        Whitespace@20..21 " "
        Ident@21..30 "title_idx"
        Whitespace@30..31 " "
        On@31..33 "ON"
        Whitespace@33..34 " "
        RangeVar@34..39
          Ident@34..39 "films"
        Whitespace@39..40 " "
        Ascii40@40..41 "("
        IndexElem@41..46
          Ident@41..46 "title"
        Ascii41@46..47 ")"
        Whitespace@47..48 " "
        Include@48..55 "INCLUDE"
        Whitespace@55..56 " "
        Ascii40@56..57 "("
        IndexElem@57..65
          Ident@57..65 "director"
        Ascii44@65..66 ","
        Whitespace@66..67 " "
        IndexElem@67..73
          Ident@67..73 "rating"
        Ascii41@73..74 ")"
        Ascii59@74..75 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: IndexStmt(
                IndexStmt {
                    idxname: "title_idx",
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "films",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 33,
                        },
                    ),
                    access_method: "btree",
                    table_space: "",
                    index_params: [
                        Node {
                            node: Some(
                                IndexElem(
                                    IndexElem {
                                        name: "title",
                                        expr: None,
                                        indexcolname: "",
                                        collation: [],
                                        opclass: [],
                                        opclassopts: [],
                                        ordering: SortbyDefault,
                                        nulls_ordering: SortbyNullsDefault,
                                    },
                                ),
                            ),
                        },
                    ],
                    index_including_params: [
                        Node {
                            node: Some(
                                IndexElem(
                                    IndexElem {
                                        name: "director",
                                        expr: None,
                                        indexcolname: "",
                                        collation: [],
                                        opclass: [],
                                        opclassopts: [],
                                        ordering: SortbyDefault,
                                        nulls_ordering: SortbyNullsDefault,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                IndexElem(
                                    IndexElem {
                                        name: "rating",
                                        expr: None,
                                        indexcolname: "",
                                        collation: [],
                                        opclass: [],
                                        opclassopts: [],
                                        ordering: SortbyDefault,
                                        nulls_ordering: SortbyNullsDefault,
                                    },
                                ),
                            ),
                        },
                    ],
                    options: [],
                    where_clause: None,
                    exclude_op_names: [],
                    idxcomment: "",
                    index_oid: 0,
                    old_node: 0,
                    old_create_subid: 0,
                    old_first_relfilenode_subid: 0,
                    unique: true,
                    nulls_not_distinct: false,
                    primary: false,
                    isconstraint: false,
                    deferrable: false,
                    initdeferred: false,
                    transformed: false,
                    concurrent: false,
                    if_not_exists: false,
                    reset_default_tblspc: false,
                },
            ),
            range: 0..74,
        },
    ],
}
